started on blog html

--- a/blog.html
+++ b/blog.html
@@ -17,6 +17,17 @@
 <body>
 
   <!-- TODO: Create header, main, and footer elements -->
+  <header>
+
+  </header>
+
+  <main>
+
+  </main>
+
+  <footer>
+
+  </footer>
 
 </body>
 
