jumping all over the place haha

--- a/blog.html
+++ b/blog.html
@@ -18,7 +18,7 @@
 
   <!-- TODO: Create header, main, and footer elements -->
   <header>
-
+    <button id="back">Toggle light/dark mode</button>
   </header>
 
   <main>
