done w this for now

--- a/blog.html
+++ b/blog.html
@@ -22,7 +22,13 @@
   </header>
 
   <main>
+    <ul id="blogList">
+      <li>
+        <article>
 
+        </article>
+      </li>
+    </ul>
   </main>
 
   <footer>
