--- a/index.html
+++ b/index.html
@@ -13,24 +13,34 @@
   <script defer src="./assets/js/logic.js" type="text/javascript"></script>
   <script defer src="./assets/js/form.js" type="text/javascript"></script>
 </head>
+<header>
+  <button id="toggle"></button>
+</header>
+<aside>
+  <h2>My First Blog</h2>
+</aside>
 
 <body>
   <!-- TODO: Create landing page elements to match the mock-up provided. At the very least, include the following elements. -->
-
-  <!-- A form element that contains the following: -->
-  <form action="">
-    <!-- An input element whose label and id are `username` -->
-    <label for="username">username</label>
-    <input id="username" type="text">
-    <!-- An input element whose label and id are `title` -->
-    <label for="title">title</label>
-    <input id="title" type="text">
-    <!-- A textarea element whose label and id are `content` -->
-    <label for="content">content</label>
-    <input id="content" type="text">
-    <!-- A p element whose id is `error` -->
-    <p id="error"></p>
+  <section>
+    <!-- A form element that contains the following: -->
+    <form action="">
+      <!-- An input element whose label and id are `username` -->
+      <label for="username">username</label>
+      <input id="username" type="text">
+      <!-- An input element whose label and id are `title` -->
+      <label for="title">title</label>
+      <input id="title" type="text">
+      <!-- A textarea element whose label and id are `content` -->
+      <label for="content">content</label>
+      <textarea name="" id="content"></textarea>
+      <!-- A p element whose id is `error` -->
+      <input type="submit">
+      <p id="error"></p>
+  </section>
   </form>
+
+
 
 </body>
 
